k8s/test/backend/backend_ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: backend-ingressroute
  namespace: test
spec:
  entryPoints:
    - web 
  routes:
    - kind: Rule
      match: Host(`api-test.steponedockerregistry.co.in`)
      services:
        - name: backend
          port: 80
