k8s/test/backend/backend_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: test
spec:
  selector:
    app: backend
  ports:
  - port: 80
    targetPort: 3001
